[gd_scene load_steps=3 format=3 uid="uid://ccxciogjyvwg3"]

[ext_resource type="Script" path="res://Scripts/menu_controller.gd" id="1_ug77i"]

[sub_resource type="Shortcut" id="Shortcut_8cboa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ug77i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 170.0

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_8cboa")
text = "Credits"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit game"

[node name="Credits" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 283.0
offset_top = 44.0
offset_right = 798.0
offset_bottom = 528.0
text = "Credits:"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
